force-app/main/default/objects/pstar__Assessment__c/pstar__Assessment__c.object-meta.xml
<CustomObject>
    <label>Assessment</label>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>