force-app/main/default/objects/pstar__Assessment__c/fields/pstar__Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Assessment_Date__c</fullName>
    <label>Assessment Date</label>
    <type>DateTime</type>
</CustomField>