force-app/main/default/objects/pstar__Assessment__c/fields/pstar__Patient__c.field-meta.xml
<CustomField>
    <fullName>pstar__Patient__c</fullName>
    <label>Patient</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>