force-app/main/default/objects/pstar__Assessment__c/fields/pstar__Referral__c.field-meta.xml
<CustomField>
    <fullName>pstar__Referral__c</fullName>
    <label>Referral</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>