force-app/main/default/objects/pstar__Assessment__c/fields/pstar__Status__c.field-meta.xml
<CustomField>
    <fullName>pstar__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>